preventing scrollbar from repositioning elements

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
   }
   
+  html {
+    overflow-y: scroll;
+  }
+
   body {
     padding: 2rem;
     display: flex;
